Dumb mistake. Fix text alignment

--- a/styles.css
+++ b/styles.css
@@ -125,4 +125,5 @@ footer {
   justify-content: center;
   align-items: center;
   margin-top: -40px;
+  text-align: center;
 }
